--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
-{% block title %}Review of {% endblock %}
+{% block title %}{{ post.post_title }} {{ post.post_subtitle }}{% endblock %}
 {% block content %}
  
 <div class="container-fluid review-container">
     <div class="game-header">
         {% if 'username' in session %}
             <div class="edit-post p-3 mb-2 bg-info">
-                <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit_post btn btn-warning text-white">
+                <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit-post btn btn-warning text-white">
                     Edit Post
                 </a>
+                <a href="" class="delele-post btn btn-danger text-white">
+                    Delete Post
+                </a>
             </div>
+            
         {% endif %}
         <div class="game-title h3 text-center">
             <div class="titles align-middle">
