--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/css-circular-prog-bar.css') }}" rel="stylesheet">
-
+    <link rel="shortcut icon" href="">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
